--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
+        <nav>
+            <div id="navbar-left">
+                <a href="">About</a>
+                <a href="">Store</a>
+            </div>
+            <div id="navbar-right">
+                <div id="gmail-images">
+                    <a href="">Gmail</a>
+                    <a href="">Images</a>
+                </div>
+                <div id="apps-logo-account">
+                    <img id="apps-logo" src="https://icon-library.com/images/google-apps-icon-png/google-apps-icon-png-28.jpg" alt="Google apps logo">
+                    <a href="" id="sign-in">Sign in</a>
+                </div>
+            </div>
+        </nav>
         <main>
             <div id="logo">
                 <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
