Added footer. Project finished :)

--- a/index.html
+++ b/index.html
@@ -40,5 +40,17 @@
                 </form>
             </div>
         </main>
+        <footer>
+            <div id="footer-left">
+                <a href="">Advertising</a>
+                <a href="">Business</a>
+                <a href="">How Search works</a>
+            </div>
+            <div id="footer-right">
+                <a href="">Privacy</a>
+                <a href="">Terms</a>
+                <a href="" id="settings">Settings</a>
+            </div>
+        </footer>
     </body>
 </html>
